--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
+    <div class="load" id="load">
+        <img src="img/loadcoffee.gif" class="load__gif" alt="">
+    </div>
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
@@ -96,13 +99,13 @@
                 </div>
 
                 <div class="espec__category">
-                    <div class="espec__group">
+                    <div class="espec__group espec__line">
                         <img src="img/specialty1.png" alt="" class="espec__img">
                         <h3 class="espec__titulo">Grãos Selecionados</h3>
                         <p class="espec__desc">Nós selecionamos os melhores graõs, para voce sentir o verdadeiro gosto do café</p>
                     </div>
 
-                    <div class="espec__group">
+                    <div class="espec__group espec__line">
                         <img src="img/specialty2.png" alt="" class="espec__img">
                         <h3 class="espec__titulo">Cookies Deliciosos</h3>
                         <p class="espec__desc">Aproveite seu café com Cookies feitos na hora</p>
