--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     </div>
 
-                    <a href="#especialidade">
+                    <a href="#espec">
                         <img src="img/scroll.png" alt="" class="home__scroll">
                     </a>
                 </div>
@@ -358,7 +358,7 @@
             </div>
         </section>
 
-        <div class="section blog section" id="blog">
+        <section class="section blog section" id="blog">
             <div class="blog__container container">
                 <h2 class="section__titulo">
                     Nosso blog sobre café
@@ -424,7 +424,7 @@
                     </article>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer class="footer">
